# git-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  STATUS.md  demo.sh
.github/workflows/: README.md  ci.yml  docs.yml  link-check-config.json  maintenance.yml  quality.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_OLD.md  COMMANDS.md  GIT_INTERNALS.md  QUICK_REFERENCE.md  README.md  STATUS.md
scripts/: format.sh
src/: lib.rs  main.rs
src/application/: add.rs  clone.rs  commit.rs  diff.rs  diff_new.rs  init.rs  log.rs  mod.rs  status.rs
src/cli/: commands.rs
src/domain/: index.rs  mod.rs  objects.rs  references.rs  remote.rs  repository.rs
src/infrastructure/: index_store.rs  mod.rs  object_store.rs  ref_store.rs  remote_client.rs
test_log/: hello.txt
test_log/.git-rs/: HEAD  config  git-rs-index
test_log/.git-rs/refs/heads/: main
test_repo/.git-rs/: git-rs-index
test_repo/.git-rs/refs/heads/: main
tests/: integration_clone.rs  integration_diff.rs
